# minecraft

./: .deny.toml  .gitignore  .ignore  .rustfmt.toml  Cargo.toml  Datagen.java  release.toml
.cargo/: config.toml
.github/workflows/: rust.yml
.zed/: settings.json
codec/: Cargo.toml
data/: 1.16.5.txt  1.17.1.txt  1.18.2.txt  1.19.4.txt  1.20.6.txt  Cargo.toml  README.md  biome.snbt  block_state.txt  block_tags.txt  build.rs  chat_type.snbt  codec.snbt  damage_type.snbt  data.txt  dimension_type.snbt  entity.txt  entity_tags.txt  fluid_state.txt  item.txt  item_tags.txt  packet.txt  registries.txt  trim_material.snbt  version.txt
data/src/: lib.rs  packet.rs  shared.rs
datagen/: Datagen.java
generator/: Datagen.java  datagen.sh
haya_brigadier/: Cargo.toml
haya_brigadier/src/: lib.rs
haya_collection/: Cargo.toml
haya_collection/src/: lib.rs
haya_data/: Cargo.toml  README.md  block_state.txt  build.rs  item.txt  item_tags.txt  version.txt
haya_data/src/: lib.rs
haya_ecs/: Cargo.toml
haya_ecs/src/: lib.rs
haya_ident/: Cargo.toml
haya_ident/src/: lib.rs
haya_math/: Cargo.toml
haya_math/src/: lib.rs
haya_mutf8/: Cargo.toml
haya_mutf8/src/: lib.rs
haya_nbt/: Cargo.toml  build.rs  formatting.rs  phf.rs  trie.rs  util.rs
haya_nbt/src/: byte_array.rs  compound.rs  int_array.rs  lib.rs  list.rs  long_array.rs  number.rs  string.rs  stringify.rs  unicode.rs
haya_palette/: Cargo.toml
haya_palette/src/: chunk.rs  lib.rs
haya_protocol/: Cargo.toml
haya_protocol/src/: advancement.rs  attribute.rs  block.rs  chat.rs  clientbound.rs  command.rs  crafting.rs  debug.rs  effect.rs  entity.rs  entity_data.rs  food.rs  game_event.rs  inventory.rs  item.rs  item_stack.rs  level_event.rs  lib.rs  map.rs  minecart.rs  particle.rs  path.rs  profile.rs  recipe.rs  redstone.rs  registry.rs  score.rs  serverbound.rs  sound.rs  stat.rs  structure.rs  trading.rs  trim.rs  types.rs  waypoint.rs
haya_protocol/src/clientbound/: common.rs  configuration.rs  cookie.rs  game.rs  login.rs  ping.rs  status.rs
haya_protocol/src/item/: consume_effect.rs  firework_explosion.rs  item_enchantments.rs  kinetic_weapon.rs
haya_protocol/src/item_stack/: consumable.rs  consume_effect.rs  firework_explosion.rs  item_attribute_modifiers.rs  item_enchantments.rs  kinetic_weapon.rs  suspicious_stew_effects.rs  tool.rs
haya_protocol/src/profile/: nbt.rs
haya_protocol/src/serverbound/: common.rs  configuration.rs  cookie.rs  game.rs  handshake.rs  login.rs  ping.rs  status.rs
haya_ser/: Cargo.toml  README.md
haya_ser/src/: hex.rs  integer.rs  lib.rs  memchr.rs  mutf8.rs  read.rs  reader.rs  varint.rs  write.rs  writer.rs
haya_ser_macro/: Cargo.toml  README.md
haya_ser_macro/src/: deserialize.rs  lib.rs  serialize.rs
haya_str/: Cargo.toml
haya_str/src/: lib.rs
haya_text/: Cargo.toml
haya_text/src/: chat.rs  click_event.rs  color.rs  decoration.rs  dialog.rs  hex.rs  hover_event.rs  json.rs  lib.rs  nbt.rs  profile.rs
minecraft_data/: Cargo.toml  build.rs  trim_pattern.snbt
minecraft_data/src/: lib.rs
protocol/: Cargo.toml
protocol/src/: chat.rs  clientbound.rs  dialog.rs  item.rs  lib.rs  nbt.rs  profile.rs  serverbound.rs  str.rs  types.rs
protocol/src/chat/: binary.rs  nbt.rs
protocol/src/clientbound/: common.rs  configuration.rs  cookie.rs  login.rs  status.rs
protocol/src/nbt/: byte_array.rs  compound.rs  list.rs  mutf8.rs  scanner.rs  string.rs  stringify.rs
protocol/src/profile/: binrary.rs  nbt.rs
protocol/src/serverbound/: cookie.rs  login.rs  status.rs
ser/: Cargo.toml  build.rs
ser/src/: bytes.rs  float.rs  hex.rs  integer.rs  json.rs  lib.rs  mutf8.rs  nbt.rs  read.rs  readable.rs  snbt.rs  str.rs  text.rs  varint.rs  writable.rs  write.rs  writer.rs
ser/src/nbt/: list.rs  mutf8.rs  string.rs  stringify.rs
ser_macro/: Cargo.toml
ser_macro/src/: deserialize.rs  lib.rs  serialize.rs  writable.rs
src/: cfb8.rs  chunk.rs  command.rs  ecs.rs  entity.rs  inventory.rs  kd_tree.rs  lib.rs  math.rs  net.rs  noise.rs  oneshot.rs  recipe.rs  rng.rs  text.rs
src/chunk/: light.rs  paletted.rs  section.rs
src/net/: c2s.rs  channel.rs  decoder.rs  encoder.rs  s2c.rs
src/text/: color.rs  component.rs  formatting.rs
