[workspace]
members = ["haya_data", "haya_ecs", "haya_ident", "haya_math", "haya_mutf8", "haya_nbt", "haya_palette", "haya_protocol", "haya_ser", "haya_ser_macro", "haya_str", "haya_text"]
resolver = "3"

[workspace.package]
authors = ["hayanesuru <hayanesuru@outlook.jp>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hayanesuru/minecraft"
edition = "2024"

[workspace.dependencies]
mser = { path = "haya_ser", version = "3.0", default-features = false }
mser_macro = { path = "haya_ser_macro", version = "3.0", default-features = false }
minecraft_data = { path = "haya_data", version = "3.0", default-features = false }
haya_nbt = { path = "haya_nbt", version = "0.1" }
haya_str = { path = "haya_str", version = "0.1" }
haya_ident = { path = "haya_ident", version = "0.1" }
haya_mutf8 = { path = "haya_mutf8", version = "0.1" }
haya_ecs = { path = "haya_ecs", version = "0.1" }
haya_text = { path = "haya_text", version = "0.1" }
haya_math = { path = "haya_math", version = "0.1" }

uuid = { version = "1", default-features = false }

[profile.dev.package."minecraft_data"]
incremental = false
