[package]
name = "minecraft_data"
version = "2.0.0"
description = "minecraft_data"
edition.workspace = true
authors.workspace = true
readme = "README.md"
license.workspace = true
repository.workspace = true
categories = []
keywords = ["minecraft"]
documentation = "https://docs.rs/minecraft_data"

[features]

[dependencies]
mser = { workspace = true }
highway = "1"

[build-dependencies]
mser = { workspace = true }
itoa = "1"
ryu = "1"
highway = "1"
