[package]
name = "minecraft_data"
version = "2.0.5"
description = "minecraft data"
edition.workspace = true
authors.workspace = true
readme = "README.md"
license.workspace = true
repository.workspace = true
categories = ["no-std"]
keywords = ["minecraft"]
documentation = "https://docs.rs/minecraft_data"

[features]
default = ["std"]
std = ["highway/std", "mser/std"]

[dependencies]
mser = { workspace = true, default-features = false }
highway = { version = "1", default-features = false }

[build-dependencies]
mser = { workspace = true, default-features = false }
itoa = "1"
ryu = "1"
highway = { version = "1", default-features = false }
nested = "0.1"
