[package]
name = "minecraft_data"
version = "2.1.0-rc.3+1.21.11-pre3"
description = "minecraft data"
edition.workspace = true
authors.workspace = true
readme = "README.md"
license.workspace = true
repository.workspace = true
categories = ["game-engines", "no-std"]
keywords = ["minecraft"]
documentation = "https://docs.rs/minecraft_data"

[features]
default = []

[dependencies]
mser = { workspace = true, default-features = false }

[build-dependencies]
mser = { workspace = true, default-features = false }
itoa = "1"
ryu = "1"
nested = "0.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
