[package]
name = "haya_nbt"
version = "0.4.0"
authors.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
mser = { workspace = true }
haya_mutf8 = { workspace = true }
haya_str = { workspace = true }
haya_collection = { workspace = true }

itoa = "1"
ryu = "1"
rand = "0"

[build-dependencies]
rand = "0"
