[package]
name = "haya_palette"
version = "1.0.0"
authors.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
publish = ["haya"]
description = "palette"

[dependencies]
mser = { workspace = true }
minecraft_data = { workspace = true }

hashbrown = { version = "0", default-features = false }
