[package]
name = "haya_protocol"
version = "1.0.0+1.21.11"
authors.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true
description = "protocol"

[features]
default = []

[dependencies]
minecraft_data = { workspace = true }
mser = { workspace = true }
mser_macro = { workspace = true }
haya_nbt = { workspace = true }
haya_ident = { workspace = true }
haya_math = { workspace = true }
haya_collection = { workspace = true }

uuid = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
features = []
all-features = true
