[package]
name = "mser"
version = "2.2.0"
description = "mser"
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
categories = ["no-std", "encoding"]
documentation = "https://docs.rs/mser"

[features]

[dependencies]
uuid = { workspace = true }

[package.metadata.docs.rs]
features = []
targets = ["x86_64-unknown-linux-gnu"]
