[package]
name = "mser"
version = "4.0.0"
description = "ser"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories = ["no-std", "encoding"]
documentation = "https://docs.rs/mser"
publish = ["crates.io"]
readme = "README.md"

[features]

[dependencies]
uuid = { workspace = true }

[package.metadata.docs.rs]
features = []
targets = ["x86_64-unknown-linux-gnu"]
