[package]
name = "mser_macro"
version = "3.0.0"
description = "mser_macro"
authors.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
categories = ["no-std"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
itoa = "1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
