[package]
name = "mser_macro"
version = "4.0.0"
description = "ser macro"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
documentation = "https://docs.rs/mser_macro"
categories = ["no-std"]
publish = ["crates.io"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = [] }
quote = "1"
proc-macro2 = "1"
itoa = "1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
