[package]
name = "haya_text"
version = "0.2.0"
authors.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
mser = { workspace = true }
minecraft_data = { workspace = true }
haya_str = { workspace = true }
haya_ident = { workspace = true }
haya_nbt = { workspace = true }

uuid = { workspace = true }
