[package]
name = "haya_text"
version = "1.0.0+1.21.11"
authors.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
publish = ["haya"]
description = "text"

[dependencies]
mser = { workspace = true }
haya_str = { workspace = true }
haya_ident = { workspace = true }
haya_nbt = { workspace = true }
haya_math = { workspace = true }

uuid = { workspace = true }
