[package]
name = "minecraft_data_protocol"
version = "0.1.0-rc.0+1.21.11"
authors.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[features]
default = ["allocator-api2"]

[dependencies]
minecraft_data = { workspace = true }
mser = { workspace = true }
mser_macro = { workspace = true }
uuid = { version = "1", default-features = false }
allocator-api2 = { version = "0.2.9", optional = true, default-features = false, features = ["alloc"] }
smallvec = "1"
itoa = "1"
ryu = "1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
features = ["allocator-api2"]
all-features = true
