[package]
name = "minecraft_data_protocol"
version = "0.1.0-rc.0+1.21.11"
authors.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[features]
default = []

[dependencies]
minecraft_data = { workspace = true }
mser = { workspace = true }
mser_macro = { workspace = true }
uuid = { version = "1", default-features = false }
itoa = "1"
ryu = "1"
unicode_names2 = "2.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
features = []
all-features = true
