[package]
name = "mser"
version = "2.1.0-rc.0"
description = "mser"
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
categories = ["no-std", "encoding"]
documentation = "https://docs.rs/mser"
build = "build.rs"

[features]
default = []
nbt = []

[dependencies]
uuid = { version = "1", default-features = false }
itoa = "1"
ryu = "1"
smallvec = "1"

[build-dependencies]
rustc_version = "0"

[package.metadata.docs.rs]
features = ["nbt"]
targets = ["x86_64-unknown-linux-gnu"]
