[package]
name = "mser"
version = "2.1.0-rc.1"
description = "mser"
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
categories = ["no-std", "encoding"]
documentation = "https://docs.rs/mser"
build = "build.rs"

[features]
default = []
allocator_api = []

[dependencies]
uuid = { version = "1", default-features = false }
allocator-api2 = { version = "0.2.9", optional = true, default-features = false, features = ["alloc"] }

[build-dependencies]
rustc_version = "0"

[package.metadata.docs.rs]
features = ["allocator-api2"]
targets = ["x86_64-unknown-linux-gnu"]
