[package]
name = "mser_macro"
version = "2.0.0"
description = "mser_macro"
authors.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
categories = ["no-std"]

[features]
default = ["std"]
std = ["mser/std"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
mser = { workspace = true }
